Pva/evsrestapi 480 implement duo (#242)
* add duo to devreset owl checks

* not monthly

* added to devresets

* added to fhir set

* typo fix

* fixed tests

* a few more fixes to indexing duo

* still fixing

* fix duo test

* sampling still to come, fixing typos

* simplify version query

* unneeded loggers

* gitignore and report sample

* add more codes

* reorder imports

* add definitions/synonyms

* small changes to compatibility

* roles/inverse roles

* get axioms through batch query

* more work on axioms

* add another to report for axioms

* bug fix in roles/inverseRoles

* report.sh changes

* add another sample

* duo samples

* fix a couple tests

* some sampling fixes

* disjointwith

* disjointwith sparql

* pending duplicate parent fix

* test fix

* fix indexing

* term hack for iao

* Ignore sources when getting graphs

* Ignore sources when getting graphs

* Restore testing NCIm for indexing

* Ignore sources when getting graphs

* Ignore sources when getting graphs

* Ignore sources when getting graphs

* Ignore sources when getting graphs

---------

Co-authored-by: Brian Carlsen <bcarlsen@westcoastinformatics.com>
Co-authored-by: akuppusamy-wci <akuppusamy@westcoastinformatics.com>

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -8,7 +8,7 @@ PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
 PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 
 prefix.graph=PREFIX :<#{source}#> \
-PREFIX base:<#{source}>
+PREFIX base:<#{source}#>
 
 prefix.chebi=PREFIX :<http://purl.obolibrary.org/obo/chebi.owl#> \
 PREFIX base:<http://purl.obolibrary.org/obo/chebi.owl#> \
@@ -42,6 +42,27 @@ all.graphs.and.versions=SELECT DISTINCT ?source ?graphName ?version ?date ?comme
       ?source owl:versionIRI ?version . \
       OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } . \
       FILTER NOT EXISTS { ?source owl:versionInfo ?x_versionInfo } \
+    } \
+  } \
+}
+
+all.graphs.and.versions.ignore.sources=SELECT DISTINCT ?source ?graphName ?version ?date ?comment \
+{ GRAPH ?graphName \
+  { \
+    { \
+      ?source a owl:Ontology . \
+      ?source owl:versionInfo ?version \
+      OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } \
+      OPTIONAL { ?source (rdfs:comment) ?comment} \
+       FILTER (?source NOT IN (#{ignoredSources})) \
+    } \
+    UNION \
+    { \
+      ?source a owl:Ontology . \
+      ?source owl:versionIRI ?version . \
+      OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } . \
+      FILTER NOT EXISTS { ?source owl:versionInfo ?x_versionInfo } \
+      FILTER (?source NOT IN (#{ignoredSources})) \
     } \
   } \
 }
@@ -357,7 +378,7 @@ inverse.associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
-inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
     { \
@@ -369,10 +390,25 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} "#{conceptCode}" . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode . } \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      FILTER(?x_concept = #{conceptCode}) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      BIND(?x_concept AS ?conceptCode) \
+	} \
     UNION \
     { \
       ?relatedConcept a owl:Class . \
@@ -466,19 +502,37 @@ inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?r
 # ?concept and ?relatedConcept both must have a code
 inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
-  { \
-      ?relatedConcept a owl:Class . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?x_concept . \
-      ?x_concept a owl:Class . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	{ \
+	  { \
+	      ?relatedConcept a owl:Class . \
+	      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+	      ?rs a owl:Restriction . \
+	      ?rs owl:onProperty ?relationship . \
+	      ?rs owl:someValuesFrom ?x_concept . \
+	      ?x_concept a owl:Class . \
+	      ?x_concept #{codeCode} ?conceptCode . \
+	      FILTER (?conceptCode IN (#{inClause})) . \
+	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	  } \
+	  UNION \
+	  { \
+	      ?relatedConcept a owl:Class . \
+	      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+	      ?rs a owl:Restriction . \
+	      ?rs owl:onProperty ?relationship . \
+	      ?rs owl:someValuesFrom ?x_concept . \
+	      ?x_concept a owl:Class . \
+	      FILTER (?x_concept IN (#{aboutClause})) . \
+	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	      FILTER NOT EXISTS { ?x_concept #{codeCode} ?x_code } . \
+	      BIND(?x_concept AS ?conceptCode) \
+	  } \
   } \
 }
 #           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
@@ -500,6 +554,20 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
+    UNION \
+  	{ \
+      ?x_concept a owl:Class . \
+      FILTER(?x_concept = #{conceptCode}) . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } \
+	} \
     UNION \
     { \
       ?x_concept a owl:Class . \
@@ -593,6 +661,7 @@ roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedCo
 # ?concept and ?relatedConcept both must have a code
 roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
+ { \
   { \
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} ?conceptCode . \
@@ -607,7 +676,25 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
-}
+  UNION \
+  { \
+      ?x_concept a owl:Class . \
+      FILTER (?x_concept IN (#{aboutClause})) . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      FILTER NOT EXISTS { ?x_concept #{codeCode} ?conceptCode } . \
+      BIND(?x_concept AS ?conceptCode) \
+  } \
+ } \
+}  
+
 #          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
@@ -687,21 +774,33 @@ disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 # relationship label is bound to "disjointWith"
 disjoint.with.batch=SELECT ?conceptCode ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
-  { \
-    ?x a owl:Class . \
-    ?x #{codeCode} ?conceptCode . \
-    FILTER (?conceptCode IN (#{inClause})) . \
-    ?x owl:disjointWith ?relatedConcept . \
-    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
-  } \
+	{ \
+	  { \
+	    ?x a owl:Class . \
+	    ?x #{codeCode} ?conceptCode . \
+	    FILTER (?conceptCode IN (#{inClause})) . \
+	    ?x owl:disjointWith ?relatedConcept . \
+	    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	  } \
+	  UNION \
+	  { \
+	    ?x a owl:Class . \
+	    FILTER (?x IN (#{aboutClause})) . \
+	    ?x owl:disjointWith ?relatedConcept . \
+	    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	    FILTER NOT EXISTS { ?x #{codeCode} ?conceptCode } . \
+	    BIND(?x AS ?conceptCode) \
+	  } \
+	 } \
 }
 #ORDER BY ?conceptCode
 
 # (1) owl:Class|rdfs:subClassOf|owl:Class
 # (2) owl:Class|owl:equivalentClass|owl:Class|owl:intersectionOf|owl:Class
 # (3) owl:Class|rdfs:subClassOf|owl:Class|owl:intersectionOf|owl:Class
-hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
+hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
 { GRAPH <#{namedGraph}> \
   { \
     { \
