--- a/build.gradle
+++ b/build.gradle
@@ -154,6 +154,10 @@ test {
 }
 
 // Format the code using google-java-format: https://github.com/diffplug/spotless/blob/main/plugin-gradle/README.md
+// On Windows
+//  use `git config core.eol lf`  (and set globally if you want)
+// Use ./gradlew spotlessJavaCheck to run checks
+// Use ./gradlew spotlessJavaApply to perform fixes
 spotless {
     format 'misc', {
         // define the files to apply `misc` to
