Fixes for unit tests failing

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -402,7 +402,7 @@ inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipL
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?x_concept . \
       ?x_concept a owl:Class . \
-      FILTER(?x_concept = #{conceptCode}) . \
+      FILTER(?x_concept = <#{conceptAbout}>) . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
@@ -557,7 +557,7 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     UNION \
   	{ \
       ?x_concept a owl:Class . \
-      FILTER(?x_concept = #{conceptCode}) . \
+      FILTER(?x_concept = <#{conceptAbout}>) . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
