fixes for duplicate properties/definitions

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -98,7 +98,8 @@ properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
       FILTER NOT EXISTS { ?x #{codeCode} ?x_code } \
     } \
   } \
-}
+} \
+ORDER BY ?propertyCode ?propertyLabel
 
 properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
@@ -125,7 +126,8 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
       FILTER NOT EXISTS { ?conceptCode #{codeCode} ?x_code } \
     } \
   } \
-}
+} \
+ORDER BY ?conceptCode ?propertyCode ?propertyLabel
 
 # ORDER by is important here because we need all the axiom parts together
 axioms=SELECT ?axiom ?axiomProperty ?axiomValue \
@@ -865,7 +867,8 @@ all.properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
   } \
-}
+} \
+ORDER BY ?propertyCode ?propertyLabel
 
 
 # distinct property values (String properytCode, String namedGraph)
