reindex changes for wacky versionInfo

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -860,15 +860,20 @@ hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?ch
 all.properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { \
-	?x_concept a owl:Class . \
+    ?x_concept a owl:Class . \
     ?x_concept ?property ?y . \
-    ?property a owl:AnnotationProperty . \
+    { \
+      { ?property a owl:AnnotationProperty } \
+      UNION \
+      { ?property a owl:DatatypeProperty } \
+    } \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
   } \
 } \
 ORDER BY ?propertyCode ?propertyLabel
+
 
 
 # distinct property values (String properytCode, String namedGraph)
