Remove prefixes for terminologies from sparql-queries.properties and use terminology metadata instead

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -10,17 +10,20 @@ PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 prefix.graph=PREFIX :<#{source}#> \
 PREFIX base:<#{source}#>
 
-prefix.chebi=PREFIX :<http://purl.obolibrary.org/obo/chebi.owl#> \
-PREFIX base:<http://purl.obolibrary.org/obo/chebi.owl#> \
-PREFIX chebi:<http://purl.obolibrary.org/obo/chebi/> \
-PREFIX CHEBI:<http://purl.obolibrary.org/obo/chebi/> \
-PREFIX obo:<http://purl.obolibrary.org/obo>
+# Present in chebi.json now
+#prefix.chebi=PREFIX :<http://purl.obolibrary.org/obo/chebi.owl#> \
+#PREFIX base:<http://purl.obolibrary.org/obo/chebi.owl#> \
+#PREFIX chebi:<http://purl.obolibrary.org/obo/chebi/> \
+#PREFIX CHEBI:<http://purl.obolibrary.org/obo/chebi/> \
+#PREFIX obo:<http://purl.obolibrary.org/obo>
 
-prefix.hgnc=PREFIX :<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#> \
-PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
+# Present in hgnc.json now
+#prefix.hgnc=PREFIX :<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#> \
+#PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
 
-prefix.go=PREFIX obo1:<http://purl.obolibrary.org/obo> \
-PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
+# Present in go.json now
+#prefix.go=PREFIX obo1:<http://purl.obolibrary.org/obo> \
+#PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
 
 all.graph.names=SELECT DISTINCT ?graphName { graph ?graphName {?s ?p ?o} }
 
