--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-properties-migrator'
     implementation 'org.springframework:spring-aop'
     implementation 'org.springframework.data:spring-data-elasticsearch:4.2.12'
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
 
     implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'org.aspectj:aspectjweaver:1.9.2'
