--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,45 +1,4 @@
 #
-# Spring Properties - copied from application-local
-#
-spring:
-    #
-    # Application Properties
-    #
-    application:
-        name: nci-evs-api
-    #profiles:
-    #  include: metadata
-
-    #
-    # JSON Formatting Properties
-    #
-    jackson:
-        serialization:
-            INDENT_OUTPUT: true
-
-    # ehcache configuration
-    cache:
-        jcache:
-            config: classpath:ehcache.xml
-
-management:
-    endpoints:
-        web:
-            exposure:
-                include: heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
-
-info:
-    app:
-        name: NCI EVS API
-        version: 1.0.0.RELEASE
----
-#
-# Test Properties
-#
-test:
-  conceptCodeList: ${CONCEPT_CODE_LIST:C7073}
-
-#
 # Spring Properties
 #
 spring:
@@ -63,6 +22,24 @@ spring:
     jcache:
       config: classpath:ehcache.xml
 
+  # test profile
+  config:
+    activate:
+      on-profile: test
+
+  # Term Form Mail Server Properties
+  mail:
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: 587
+    username: ${MAIL_USER:REPLACE_WITH_USERNAME}
+    password: ${MAIL_PASSWORD:REPLACE_WITH_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: ${AUTH:true}
+          starttls:
+            enable: ${TLS:true}
+
 management:
   endpoints:
     web:
@@ -73,6 +50,12 @@ info:
   app:
     name: NCI EVS API
     version: 1.0.0.RELEASE
+
+#
+# Test Properties
+#
+test:
+  conceptCodeList: ${CONCEPT_CODE_LIST:C7073}
 
 #
 # Logging Properties
