Get new terminoloiges added and all older tests passing, next: sample+test

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -310,19 +310,20 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # Here, keep all the optional clauses at the end otherwise the query times out on NCI dev
-associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+# ?relatedConcept needed in case the code/labels are blank - ?concept too for inverses
+associations.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x_concept a owl:Class . \
-    ?x_concept ?relationship ?relatedConcept . \
+    ?concept a owl:Class . \
+    ?concept ?relationship ?relatedConcept . \
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
-    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+    ?concept #{codeCode} ?conceptCode . \
   } \
 }
 
@@ -704,17 +705,17 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
-roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+roles.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x_concept a owl:Class . \
-    ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+    ?concept a owl:Class . \
+    ?concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
     ?rs a owl:Restriction . \
     ?rs owl:onProperty ?relationship . \
     ?rs owl:someValuesFrom ?relatedConcept . \
     ?relatedConcept a owl:Class . \
-    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
-    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+    ?concept #{codeCode} ?conceptCode . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
